tests/snapshots/examples_guide/do_block.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/do_block.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
