tests/snapshots/examples_guide/either_and_option.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/either_and_option.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
