tests/snapshots/examples_guide/either_type.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/either_type.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
