tests/snapshots/examples_guide/factorial.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/factorial.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
