tests/snapshots/examples_guide/fibonacci.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/fibonacci.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
