tests/snapshots/examples_guide/float.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/float.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
