tests/snapshots/examples_guide/functional_pipeline.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/functional_pipeline.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
