tests/snapshots/examples_guide/grade_analyzer.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/grade_analyzer.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
