tests/snapshots/examples_guide/hash_basic.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/hash_basic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
