tests/snapshots/examples_guide/hash_builtins.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/hash_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
