tests/snapshots/examples_guide/higher_order_builtins.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/higher_order_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
