tests/snapshots/examples_guide/if_else.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/if_else.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
